--- a/src/Text.css
+++ b/src/Text.css
@@ -5,12 +5,12 @@
     top: 480px;
     left: 100px;
     width: 400px; /* Set an initial width */
-    background-color: rgba(255, 255, 255, 0.8); /* Background for visibility */
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.5s ease, opacity 0.5s ease;
     cursor: pointer;
+    color: white;
 }
 .text-container:hover {
     transform: scale(1.25);
@@ -24,7 +24,7 @@
 
 .responsive-paragraph {
     font-size: clamp(0.875rem, 3vw + 0.5rem, 1rem); /* Responsive size based on viewport width */
-    color: #555; /* Slightly darker color */
+    color: #ffffff; /* Slightly darker color */
 }
 
 
@@ -42,4 +42,7 @@
     text-align: center; /* Center text */
     background-color: rgba(255, 255, 255, 0.9); /* Optional: semi-transparent background */
     z-index: 1000; /* Ensure it appears above other elements */
+}
+.p{
+    color: white;
 }
