--- a/src/Icons.css
+++ b/src/Icons.css
@@ -4,29 +4,34 @@ body {
 
 .iconU, .iconM, .iconS {
     font-size: 2rem; /* Adjust size as needed */
-    color: black; /* Change icons to black */
-    transition: transform 0.3s;
+    color: white; /* Change icons to black */
+    transition: transform 0.3s , font-weight 0.3s ;
 }
 
 .iconM {
     margin-top: 25px; /* Positioning for the top-left icon */
-    margin-left: 0; /* Align to the left */
+    margin-left: 30px; /* Align to the left */
+
 }
 
 .iconU, .iconS {
     display: inline-block; /* Place icons next to each other */
-    margin-left: 20px; /* Adjust space between icons */
+    margin-left: 0px; /* Adjust space between icons */
     margin-top: 25px; /* Align with the top */
     float: right; /* Position icons on the top right */
+    margin-right: 40px;
 }
 
 
 .iconU:hover {
-    transform: scale(1.2); /* Scale effect on hover */
+    transform: scale(1.3); /* Scale effect on hover */
+    font-weight: bold;
 }
 .iconM:hover {
-    transform: scale(1.2); /* Scale effect on hover */
+    transform: scale(1.3); /* Scale effect on hover */
+    font-weight: bold;
 }
 .iconS:hover {
     transform: scale(1.2); /* Scale effect on hover */
+    font-weight: bold;
 }
