--- a/src/Img.css
+++ b/src/Img.css
@@ -1,8 +1,8 @@
-/* Img.css */
+
 .background {
     background-image: url('https://wallpaperfx.com/view_image/night-lofoten-islands-norway-1536x864-wallpaper-17176.jpg');
-    background-size: cover; /* This will cover the entire div */
-    background-position: center; /* Center the image */
-    height: 100vh; /* Adjust height as needed */
-    width: 100%; /* Full width */
+    background-size: cover; 
+    background-position: center; 
+    height: 100vh; 
+    width: 100%; 
 }
