--- a/src/Text.css
+++ b/src/Text.css
@@ -1,10 +1,10 @@
 .text-container {
-    position: fixed; /* Keep this for the initial position */
+    position: fixed; 
     bottom: 20px;
     height :150px ;
     top: 480px;
     left: 100px;
-    width: 400px; /* Set an initial width */
+    width: 400px;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -17,14 +17,14 @@
     cursor: pointer;
 }
 .responsive-title :hover{
-    font-size: clamp(1.5rem, 5vw + 1rem, 2rem); /* Responsive size based on viewport width */
-    color: #333; /* Darker color */
+    font-size: clamp(1.5rem, 5vw + 1rem, 2rem); 
+    color: #333;
     margin: 0;
 }
 
 .responsive-paragraph {
-    font-size: clamp(0.875rem, 3vw + 0.5rem, 1rem); /* Responsive size based on viewport width */
-    color: #ffffff; /* Slightly darker color */
+    font-size: clamp(0.875rem, 3vw + 0.5rem, 1rem); 
+    color: #ffffff; 
 }
 
 
@@ -34,14 +34,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    transform: scale(1.5); /* Adjust scale for visibility */
+    transform: scale(1.5);
     opacity: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center; /* Center text */
-    background-color: rgba(255, 255, 255, 0.9); /* Optional: semi-transparent background */
-    z-index: 1000; /* Ensure it appears above other elements */
+    text-align: center; 
+    background-color: rgba(255, 255, 255, 0.9); 
+    z-index: 1000; 
 }
 .p{
     color: white;
