--- a/src/Img.css
+++ b/src/Img.css
@@ -3,6 +3,6 @@
     background-image: url('https://wallpaperfx.com/view_image/night-lofoten-islands-norway-1536x864-wallpaper-17176.jpg');
     background-size: cover; 
     background-position: center; 
-    height: 100vh; 
+    height: 703.2px; 
     width: 100%; 
 }
