--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -4,25 +4,23 @@
     margin-right: auto;
     display: flex;
     align-items: center;
-    border: 1px solid #ccc;
+    border: 1px solid #e2d6d6;
     border-radius: 20px; 
     padding: 10px;
     width: 400px;
     background-color: rgba(248, 243, 243, 0.8); 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
+    transition: all 0.1s ease;
     z-index: 10;
     position: fixed; 
     top: 0%; 
     left: 50%; 
     transform: translate(-50%, -50%);
-    
-}
-.search-container:hover {
-    background-color: rgba(200, 200, 200, 0.8);  
-
 }
 
+.search-container:focus-within {
+    border: 2px solid white;
+}
 #search-input {
     border: none;
     outline: none;
@@ -43,5 +41,5 @@
 #search-button svg {
     width: 20px;
     height: 20px;
-    color: #333 ;
+    color: #333;
 }
